fixed aligning issues

--- a/style.css
+++ b/style.css
@@ -32,7 +32,8 @@
     list-style: none;
     display:flex;
     flex-direction: row;
-    justify-content: space-between; 
+    justify-content: center;
+    gap: 30px; 
 
 }
 
